--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+#root {
+  width: 100vw;
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
+}
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -22,12 +29,17 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+html, body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
+  padding: 0;
+  width: 100%;
+  height: 100%;
   min-height: 100vh;
+}
+
+body {
+  display: block;
+  min-width: 320px;
 }
 
 h1 {
